[project]
name = "midealocal-toshiba"
version = "0.1.0"
description = "Toshiba IOLife AC client using Midea cloud relay"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pycryptodome>=3.20",
]

[project.scripts]
midealocal-toshiba = "midealocal_toshiba.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["midealocal_toshiba*"]
